add api support and adjust html

--- a/templates/cnki.html
+++ b/templates/cnki.html
@@ -21,10 +21,8 @@
             <!-- Proxy tools -->
         <form method="POST" name = "form1">
 
-            <div class="card" align="center" >
-                        <h2>🤡 输入中文 </h2> 
-                        
-                        <textarea  name = "trans" cols="150" rows="5" placeholder="中文" >{{ ori  }}</textarea> 
+            <div class="card" align="center" >                      
+                        <textarea  name = "trans" cols="150" rows="5" placeholder="请输入中文" >{{ ori  }}</textarea> 
                         <br><br>
                         <input  type="submit" class="card"  name= 'submit' value = "🔥 点击翻译 🍩""/>   
                         <input  type="submit" class="card"  name= 'submit' value = "🔥 点击翻译定义 🍩""/>    
@@ -34,7 +32,7 @@
             
             <div class="card"align="center" >
                 <h2>🤡 CNKI</h2>
-                <textarea  name = "left" cols="150" rows="50"  placeholder="填写订阅地址" >{{ to1  }}</textarea>                           
+                <textarea  name = "left" cols="150" rows="25"  placeholder="翻译结果" >{{ to1  }}</textarea>                           
             </div>
             
 
