--- a/templates/index.html
+++ b/templates/index.html
@@ -21,10 +21,8 @@
             <!-- Proxy tools -->
         <form method="POST" name = "form1">
 
-            <div class="card" align="center" >
-                        <h2>🤡 输入中文 </h2> 
-                        
-                        <textarea  name = "trans" cols="150" rows="5" placeholder="中文" >{{ ori  }}</textarea> 
+            <div class="card" align="center" >                        
+                        <textarea  name = "trans" cols="150" rows="5" placeholder="请输入中文" >{{ ori  }}</textarea> 
                         <br><br>
                         <input  type="submit" class="card"  name= 'submit' value = "🔥 点击翻译 🍩""/>     
                         <input  type="submit" class="card"  name= 'submit' value = "🔥 点击翻译定义 🍩""/>    
@@ -33,11 +31,11 @@
             
             <div class="card"align="center" >
                 <h2>🤡 谷歌翻译结果</h2>
-                <textarea  name = "left" cols="150" rows="10"  placeholder="填写订阅地址" >{{ to1  }}</textarea>     
+                <textarea  name = "left" cols="150" rows="5"  placeholder="翻译结果" >{{ to1  }}</textarea>     
                 <h2>🤡 百度翻译结果</h2>
-                <textarea  name = "left" cols="150" rows="10"  placeholder="填写订阅地址" >{{ to2  }}</textarea>    
+                <textarea  name = "left" cols="150" rows="5"  placeholder="翻译结果" >{{ to2  }}</textarea>    
                 <h2>🤡 有道翻译结果</h2>
-                <textarea  name = "left" cols="150" rows="10"  placeholder="填写订阅地址" >{{ to3  }}</textarea>                       
+                <textarea  name = "left" cols="150" rows="5"  placeholder="翻译结果" >{{ to3  }}</textarea>                       
             </div>
             
 
